# hass-sma-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
crates/bluez-transport/: Cargo.toml
crates/bluez-transport/src/: framer.rs  lib.rs  mock.rs  rfcomm.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  main.rs  pvoutput.rs  pvoutput_uploader.rs
crates/inverter-client/: Cargo.toml
crates/inverter-client/src/: lib.rs  session.rs  values.rs
crates/inverter-client/tests/: mock_session.rs
crates/mqtt-discovery/: Cargo.toml
crates/mqtt-discovery/src/: catalog.rs  client.rs  config.rs  lib.rs
crates/sma-bt-protocol/: Cargo.toml
crates/sma-bt-protocol/src/: auth.rs  commands.rs  constants.rs  fcs.rs  frame.rs  lib.rs  packet.rs
crates/sma-bt-protocol/tests/: captured_frames.rs  fuzz_frame_parse.rs
crates/storage/: Cargo.toml
crates/storage/src/: csv_sink.rs  lib.rs  schema.rs  writer.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  metrics.rs  server.rs  tracing_init.rs
deploy/addon/: Dockerfile  README.md  config.yaml
deploy/systemd/: README.md  config.yaml.example  hass-sma-rs.service
docs/: ARCHITECTURE.md  COMPARISON.md  DISCOVER.md  FIXTURE_CAPTURE.md  GETTING_STARTED.md  MIGRATION.md  SESSION_2026-04-19.md  grafana-alerts.yaml  grafana-dashboard.json
docs/adr/: 0001-protocol-reverse-engineering-narrative.md  0002-persistent-bluetooth-session.md  0003-rust-over-cpp.md  0004-event-log-deferred.md  0005-mis-multi-inverter.md  README.md
scripts/: parse-sbfspot-hexdump.py  pull-and-parse-captures.sh
tests/fixtures/: README.md
tests/fixtures/captured/: 0001-recv.hex  0002-send.hex  0004-recv.hex  0005-send.hex  0006-recv.hex  0007-recv.hex  0008-recv.hex  0009-send.hex  0011-recv.hex  0012-send.hex  0013-recv.hex  0014-recv.hex  0015-recv.hex  0016-send.hex  0017-recv.hex  0018-send.hex  0019-recv.hex  0020-send.hex  0021-recv.hex  0022-send.hex  0023-recv.hex  0024-send.hex  0025-recv.hex  0026-send.hex  0027-recv.hex  0028-send.hex  0029-recv.hex  0030-send.hex  0031-recv.hex  0032-send.hex  0033-recv.hex  0034-send.hex  0035-recv.hex  0036-send.hex  0037-recv.hex  0038-send.hex  0039-recv.hex  0040-send.hex  0041-recv.hex  0042-send.hex  (+244 more)
