[workspace]
resolver = "2"
members = [
    "crates/sma-bt-protocol",
    "crates/bluez-transport",
    "crates/inverter-client",
    "crates/telemetry",
    "crates/storage",
    "crates/mqtt-discovery",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MaximV93/hass-sma-rs"
authors = ["Maxim Vandebroeck <maxim.vandebroeck@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus-client = "0.23"

# Config + serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors
thiserror = "2"
anyhow = "1"

# MQTT
rumqttc = "0.24"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time", "macros"] }

# Binary + crypto
bytes = "1"
byteorder = "1"

# Testing
proptest = "1"
tokio-test = "0.4"
assert_matches = "1"

# Sockets (BlueZ)
socket2 = "0.5"
nix = { version = "0.29", features = ["socket", "net"] }

# Time
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
