[package]
name = "bluez-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Linux BlueZ RFCOMM transport for the SMA BT protocol. Trait-based for mockability; real socket only compiled on Linux."

[dependencies]
sma-bt-protocol = { path = "../sma-bt-protocol" }
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
tokio = { workspace = true, features = ["io-util", "time", "sync"] }
bytes.workspace = true
libc = "0.2"
socket2.workspace = true

[dev-dependencies]
tokio.workspace = true
