[package]
name = "hass-sma-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Main daemon. Loads config, drives per-inverter sessions, publishes MQTT."

[[bin]]
name = "hass-sma-daemon"
path = "src/main.rs"

[dependencies]
sma-bt-protocol = { path = "../sma-bt-protocol" }
bluez-transport = { path = "../bluez-transport" }
inverter-client = { path = "../inverter-client" }
mqtt-discovery = { path = "../mqtt-discovery" }
storage = { path = "../storage" }
telemetry = { path = "../telemetry" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
humantime-serde = "1"
prometheus-client = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
