[package]
name = "mqtt-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Home Assistant MQTT discovery publisher. Owns all per-inverter sensor configs — replaces the sensorsgen-addon dependency of the bash fork."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rumqttc.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio.workspace = true
