[package]
name = "sma-bt-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust implementation of the SMA Bluetooth protocol used by SMA Sunny Boy HF-series inverters. Reverse-engineered from the SBFspot codebase (AGPL); no source code copied, only the wire format replicated."

[dependencies]
bytes.workspace = true
byteorder.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
assert_matches.workspace = true
hex-literal = "0.4"
