[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Prometheus metrics + tracing-subscriber setup + /metrics HTTP endpoint."

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus-client.workspace = true
tokio = { workspace = true, features = ["rt", "net", "macros", "sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
